Tests/RunCMake/CMakePresets/InvalidPresetName-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/InvalidPresetName:
Error: @5,15: Invalid Preset Name
      "name": \[\],
              \^$
